Removed audio, fixed all ShellCheck errors

--- a/options.cfg
+++ b/options.cfg
@@ -1,7 +1,4 @@
-version="0.0.1a" # <----------Do not change
-
-# Sound settings
-music=on
+version="0.0.2" # <----------Do not change
 
 # Set framerate
 fps=6
